fixed z-index for the navbar

--- a/homepage.css
+++ b/homepage.css
@@ -128,6 +128,7 @@
   justify-content: flex-start;
   background: #f9f9f9;
   padding-bottom: 30dvh;
+  z-index: 3;
 }
 
 .mydropdown:hover .mydropdown-content {
@@ -455,10 +456,6 @@ input[type="search"] {
   height: 1px;
   background-color: white;
   opacity: 0.2;
-}
-
-.footer {
-  z-index: -1000 !important;
 }
 
 /* Add Main Content CSS here */
